Get Detector Stats
Signed-off-by: Varun Jain <varunudr@amazon.com>